[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/scaffold/src/gui/screens/SettingsScreen.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffold/src/gui/CenteredPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffold/src/gui/NavBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffold/src/gui/AccordionPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffold/src/gui/FullScreenPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/scaffold/src/gui/LabeledControlList.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.192157, 0.286275, 1 )
shadow_size = 8
shadow_offset = Vector2( -4, 4 )

[node name="SettingsScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 5 )]
margin_right = 960.0
margin_bottom = 1156.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_right = 960.0
margin_bottom = 1156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavBar" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 192.0
text = "Settings"

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 960.0
margin_bottom = 1156.0
rect_min_size = Vector2( 960, 960 )
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_right = 960.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_right = 960.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer"]
margin_left = 239.0
margin_top = 450.0
margin_right = 719.0
margin_bottom = 510.0
rect_min_size = Vector2( 480, 0 )
custom_constants/separation = 0

[node name="MainList" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
row_height = 48.0
padding_horizontal = 6.0

[node name="Spacer1" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 240.0
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AccordionPanel" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 30.0
margin_right = 480.0
margin_bottom = 30.0
is_open = false
includes_header = true
header_text = "More settings"
header_min_height = 32.0
header_font = null
is_caret_on_left = false
padding = Vector2( 16, 8 )
extra_scroll_height_for_custom_header = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DetailsList" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 14.0
margin_right = 40.0
margin_bottom = 14.0
size_flags_vertical = 4
row_height = 48.0
padding_horizontal = 6.0

[node name="Spacer3" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 240.0
margin_top = 30.0
margin_right = 240.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
